[package]
name = "meesign-crypto"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
mpecdsa = { git = "https://github.com/jirigav/mpecdsa.git", optional = true }
prost = "0.11"
serde = "1.0"
serde_json = "1.0"
typetag = "0.2.1"
elastic-elgamal = { version = "0.3.0", features = ["serde"], optional = true }
rand = "0.8.5"
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
frost-secp256k1 = { git  = "https://github.com/dufkan/frost.git", branch = "serialize-state", features = ["serde"], optional = true }
aes-gcm = "0.10.2"
k256 = { version = "0.13.1", features = ["arithmetic"] }
p12 = "0.6.3"
yasna = "0.5.2"
x509-cert = { version = "0.2.5", features = ["builder"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
# https://github.com/RustCrypto/elliptic-curves/discussions/1005
sha2 = { version = "0.10.7", features = ["oid"] }
ecies = "0.2.7"
const-oid = "0.9.6"
der = { version = "0.7.9", features = ["derive"] }

[build-dependencies]
cbindgen = "0.20.0"
prost-build = "0.11"

[dev-dependencies]
p256 = { version="0.13.2", features = ["ecdsa"] }
pcsc = "2.8.0"
sha2 = "0.10.7"

[features]
default = ["gg18", "frost", "elgamal", "bindings"]
protocol = []
bindings = []
gg18 = ["protocol", "dep:mpecdsa"]
frost = ["protocol", "dep:frost-secp256k1"]
elgamal = ["protocol", "dep:elastic-elgamal"]
